# e-pmu-data-analytics

./: .gitignore  README.md  cursor_prompt.txt  cursor_prompts_history.txt  pyproject.toml  requirements.txt  scrap_previous_data.py
Analyse temporelle/: main.py  notebook.ipynb
Analyse temporelle/utils/: api.py  log.py  orchestrator.py  super_worker.py  worker.py
async_scraping/: scraping.py
epmu/model/: _train.py  evaluate_features.py  optimize.py  prepare.py  train.py
epmu/model/optimization_results/: model_evaluation_results.csv  model_evaluation_results_2024_12_18_09h08m30s.csv
epmu/model/saved_models/: best_model_info.json
epmu/scraping/: scrap_previous_data.py  scraper.py
model/: __init__.py  correlation.py  prepare_data.py  training.py
scripts/: compute_categories_stats.py  extract_categories.py
simulations/: betting.py  betting_simulation.py
