[tool.poetry]
name = "e-pmu-data-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "*"
matplotlib = "*"
pandas = "*"
seaborn = "*"
joblib = "*"
tqdm = "*"
xgboost = "*"
lightgbm = "*"
requests = "*"
aiohttp = "*"
beautifulsoup4 = "*"
numpy = "*"
scikit-learn = "*"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
